# clion_arm_linux_demo

./: CMakeLists.txt  README.md  main.c
util/: prepare-target.sh  start-bash.sh
